--- a/static/oscar/less/midishop/search.less
+++ b/static/oscar/less/midishop/search.less
@@ -30,7 +30,8 @@
     -moz-border-radius: 3px;
     border-radius: 3px;
     box-shadow: none;
-    padding: 21px;
+    padding-left: 20px;
+    height: 43px;
     width: 100%;
   }
 
